--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,15 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>24</maven.compiler.release>
+        <maven.compiler.release>22</maven.compiler.release>
         <exec.mainClass>com.apple.kuis2.App</exec.mainClass>
     </properties>
     <name>Uas</name>
     <dependencies>
         <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>9.5.0</version>
-        <!--  Use the latest stable version  -->
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.4.0</version> <!-- Replace with the desired version -->
         </dependency>
     </dependencies>
 </project>
